# Google-edu-hackathon

./: .dockerignore  .gitignore  Agent Architecture.drawio  DOCKER_GUIDE.md  Dockerfile  Dockerfile.agent  Dockerfile.backend  Dockerfile.frontend  Dockerfile.old  README.md  build_and_deploy.sh  chat.css  chat.html  dashboard-data.js  dashboard.css  dashboard.html  deploy.sh  deployment.md  index.html  infra architecture.drawio  leaderboard.css  leaderboard.html  login.css  login.js  package.json  requirements.txt  script.js  server.js  style.css  system architecture.drawio  test_cases_agents.md  tree_output.txt
Documents/: Agents_system_design.md
RAG_Pipeline/: .gitignore
RAG_Pipeline/.gcloud_config/: access_tokens.db
RAG_Pipeline/teacher_agent/: .env  agent.py  callbacks.py  server.py
RAG_Pipeline/teacher_agent/.adk/: session.db
RAG_Pipeline/teacher_agent/explore_agent/: agent.py
RAG_Pipeline/teacher_agent/focus_agent/: agent.py
RAG_Pipeline/teacher_agent/query_agent/: agent.py
deployments/: DEPLOYMENT_GUIDE.md  QUICKSTART.md  README_CLOUDRUN.md  SIMPLE_SETUP.md  TERRAFORM_CLOUDRUN_DEPLOYMENT.md  USEFUL_COMMANDS.md  agent_cloud_run.tf  backend_cloud_run.tf  cloud_run.tf  deploy.sh  frontend_cloud_run.tf  main.tf  provider.tf  variables.tf
frontend/: index.html
frontend/src/: App.jsx  agentClient.js  api.js
src/: Dockerfile  dump.txt  pyproject.toml  seed.py
src/apis/: commands_to_deploy.md  dump.txt  main.py
static/: chat.html  dashboard-data.js  dashboard.css  dashboard.html  index.html  leaderboard.html  login.css  script.js
(+30 files in other folders)
